# api/index.js
@@ -1,6 +1,37 @@
 const router = require('express').Router();
 
-router.use('/businesses', require('./businesses'));
-router.use('/photos', require('./photos'));
+router.use('/pears', require('./pears'));
+router.use('/reviews', require('./reviews'));
+router.use('/slices', require('./slices'));
+router.use('/users', require('./users'));
+
 
 module.exports = router;
+
+
+//         ████                                                
+//           ██                                                
+//           ████                                              
+//             ██                                              
+//             ▒▒▒▒▒▒                                          
+//           ▒▒▒▒▒▒▒▒▒▒                                        
+//         ▒▒▒▒▒▒▒▒▒▒▒▒                                        
+//         ▒▒▒▒▒▒▒▒▒▒▒▒▒▒                                      
+//         ▒▒▒▒▒▒▒▒▒▒▒▒▒▒                                      
+//         ▒▒▒▒▒▒▒▒▒▒▒▒▒▒                                      
+//         ▒▒▒▒▒▒▒▒▒▒▒▒▒▒                                      
+//         ▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒                                    
+//         ▒▒▒▒▒▒▒▒  ▒▒▒▒▒▒▒▒                                  
+//       ▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒                                
+//       ▒▒▒▒▒▒▒▒▒▒▒▒  ▒▒▒▒▒▒▒▒▒▒                              
+//     ▒▒▒▒▒▒▒▒▒▒▒▒  ▒▒▒▒  ▒▒▒▒▒▒                              
+//     ▒▒▒▒▒▒▒▒  ▒▒▒▒▒▒      ▒▒▒▒▒▒                            
+//   ▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒  ▒▒  ▒▒  ▒▒▒▒                            
+//   ▒▒▒▒▒▒▒▒▒▒▒▒  ▒▒▒▒  ▒▒  ▒▒▒▒▒▒                            
+//   ▒▒▒▒▒▒▒▒  ▒▒▒▒▒▒  ▒▒      ▒▒▒▒                            
+//   ▒▒▒▒▒▒▒▒▒▒▒▒▒▒  ▒▒▒▒▒▒  ▒▒▒▒▒▒                            
+//   ▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒  ▒▒▒▒▒▒▒▒▒▒                            
+//     ▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒                              
+//       ▒▒▒▒▒▒▒▒▒▒████▒▒▒▒▒▒▒▒                                
+//         ▒▒▒▒▒▒▒▒██▒▒▒▒▒▒                                    
+
